--- a/content/posts/esc501.md
+++ b/content/posts/esc501.md
@@ -4,3 +4,38 @@ date: 2022-09-01T14:31:03+05:30
 draft: false
 ---
 
+[~/](../../)
+[~/posts/](../)
+
+1. [ ]Overview of System Analysis & Design , Business
+    System Concept, System Development Life Cycle,
+    Waterfall Model ,
+    Spiral Model, Feasibility Analysis, Technical
+    Feasibility, Cost- Benefit Analysis, COCOMO
+    model.
+
+2. [ ]System Design – Context diagram and DFD,
+    Problem Partitioning, Top-Down And Bottom-Up
+    design; Decision tree,
+    decision table and structured English; Functional vs.
+    Object- Oriented approach.
+
+3. [ ]Coding & Documentation – Structured
+    Programming, OO Programming, Information
+    Hiding, Reuse, System
+    Documentation.
+
+    - [ ]Testing – Levels of Testing, Integration Testing,
+        Test case Specification, Reliability Assessment,
+        Validation & Verification Metrics, Monitoring & Control.
+
+4. [ ]Software Project Management – Project Scheduling,
+    Staffing, Software Configuration Management,
+    Quality Assurance,
+    Project Monitoring.
+
+5. [ ]Static and dynamic models, why modeling, UML
+    diagrams: Class diagram, interaction diagram:
+    collaboration diagram,
+    sequence diagram, state chart diagram,
+    activity diagram, implementation diagram.
