updated hsmc501 + pec-it501b

--- a/content/posts/esc501.md
+++ b/content/posts/esc501.md
@@ -7,7 +7,7 @@ draft: false
 [~/](../../)
 [~/posts/](../)
 
-1. [ ]Overview of System Analysis & Design , Business
+1. [x]Overview of System Analysis & Design , Business
     System Concept, System Development Life Cycle,
     Waterfall Model ,
     Spiral Model, Feasibility Analysis, Technical
