--- a/content/posts/esc501.md
+++ b/content/posts/esc501.md
@@ -14,13 +14,13 @@ draft: false
     Feasibility, Cost- Benefit Analysis, COCOMO
     model.
 
-2. [ ]System Design – Context diagram and DFD,
+2. [x]System Design – Context diagram and DFD,
     Problem Partitioning, Top-Down And Bottom-Up
     design; Decision tree,
     decision table and structured English; Functional vs.
     Object- Oriented approach.
 
-3. [ ]Coding & Documentation – Structured
+3. [x]Coding & Documentation – Structured
     Programming, OO Programming, Information
     Hiding, Reuse, System
     Documentation.
